--- a/public/assets/css/demo.css
+++ b/public/assets/css/demo.css
@@ -194,7 +194,7 @@ body[data-background-color="dark"] .demo-icon .icon-class {
 .btnSwitch button[data-color="purple"] {
   background-color: #6C757D; }
 .btnSwitch button[data-color="light-blue"] {
-  background-color: #48ABF7; }
+  background-color: #39a092; }
 .btnSwitch button[data-color="green"] {
   background-color: #31CE36; }
 .btnSwitch button[data-color="orange"] {
