--- a/public/assets/css/kaiadmin.css
+++ b/public/assets/css/kaiadmin.css
@@ -171,9 +171,9 @@ b, .b, strong, .strong {
     color: #6C757D !important; }
 
 .text-info, .text-info a {
-  color: #48ABF7 !important; }
+  color: #39a092 !important; }
   .text-info:hover, .text-info a:hover {
-    color: #48ABF7 !important; }
+    color: #39a092 !important; }
 
 .text-success, .text-success a {
   color: #31CE36 !important; }
@@ -729,15 +729,15 @@ body {
     .sidebar .nav.nav-secondary > .nav-item .nav-collapse li.active > a, .sidebar[data-background-color="white"] .nav.nav-secondary > .nav-item .nav-collapse li.active > a {
       color: #6C757D !important; }
     .sidebar .nav.nav-info > .nav-item a:hover i, .sidebar .nav.nav-info > .nav-item a:focus i, .sidebar .nav.nav-info > .nav-item a[data-toggle=collapse][aria-expanded=true] i, .sidebar[data-background-color="white"] .nav.nav-info > .nav-item a:hover i, .sidebar[data-background-color="white"] .nav.nav-info > .nav-item a:focus i, .sidebar[data-background-color="white"] .nav.nav-info > .nav-item a[data-toggle=collapse][aria-expanded=true] i {
-      color: #48ABF7 !important; }
+      color: #39a092 !important; }
     .sidebar .nav.nav-info > .nav-item a[data-toggle=collapse][aria-expanded=true]:before, .sidebar[data-background-color="white"] .nav.nav-info > .nav-item a[data-toggle=collapse][aria-expanded=true]:before {
-      background: #48ABF7 !important; }
+      background: #39a092 !important; }
     .sidebar .nav.nav-info > .nav-item.active a:before, .sidebar[data-background-color="white"] .nav.nav-info > .nav-item.active a:before {
-      background: #48ABF7 !important; }
+      background: #39a092 !important; }
     .sidebar .nav.nav-info > .nav-item.active a i, .sidebar[data-background-color="white"] .nav.nav-info > .nav-item.active a i {
-      color: #48ABF7 !important; }
+      color: #39a092 !important; }
     .sidebar .nav.nav-info > .nav-item .nav-collapse li.active > a, .sidebar[data-background-color="white"] .nav.nav-info > .nav-item .nav-collapse li.active > a {
-      color: #48ABF7 !important; }
+      color: #39a092 !important; }
     .sidebar .nav.nav-success > .nav-item a:hover i, .sidebar .nav.nav-success > .nav-item a:focus i, .sidebar .nav.nav-success > .nav-item a[data-toggle=collapse][aria-expanded=true] i, .sidebar[data-background-color="white"] .nav.nav-success > .nav-item a:hover i, .sidebar[data-background-color="white"] .nav.nav-success > .nav-item a:focus i, .sidebar[data-background-color="white"] .nav.nav-success > .nav-item a[data-toggle=collapse][aria-expanded=true] i {
       color: #31CE36 !important; }
     .sidebar .nav.nav-success > .nav-item a[data-toggle=collapse][aria-expanded=true]:before, .sidebar[data-background-color="white"] .nav.nav-success > .nav-item a[data-toggle=collapse][aria-expanded=true]:before {
@@ -952,7 +952,7 @@ body {
   .sidebar.sidebar-style-2 .nav.nav-secondary > .nav-item.active > a[data-toggle=collapse][aria-expanded=true] i {
     color: #ffffff !important; }
 .sidebar.sidebar-style-2 .nav.nav-info > .nav-item.active > a {
-  background: #48ABF7 !important;
+  background: #39a092 !important;
   box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.1), 4px 4px 15px -5px rgba(72, 171, 247, 0.4); }
   .sidebar.sidebar-style-2 .nav.nav-info > .nav-item.active > a:before {
     background: transparent !important; }
@@ -1284,16 +1284,16 @@ body[data-background-color="dark"] .border-top {
   background: #5C55BF !important; }
 
 .logo-header[data-background-color="light-blue"] {
-  background: #48ABF7 !important; }
+  background: #39a092 !important; }
 
 .logo-header[data-background-color="light-blue2"] {
-  background: #3697E1 !important; }
+  background: #39a092!important; }
 
 .navbar-header[data-background-color="light-blue"] {
-  background: #48ABF7 !important; }
+  background: #39a092 !important; }
 
 .navbar-header[data-background-color="light-blue2"] {
-  background: #3697E1 !important; }
+  background: #39a092!important; }
 
 .logo-header[data-background-color="green"] {
   background: #31CE36 !important; }
@@ -1764,7 +1764,7 @@ label {
   .card-stats .icon-big.icon-warning {
     background: #FFAD46; }
   .card-stats .icon-big.icon-info {
-    background: #48ABF7; }
+    background: #39a092; }
   .card-stats .icon-big.icon-danger {
     background: #F25961; }
   .card-stats .icon-big.round {
@@ -1831,7 +1831,7 @@ label {
   background: #6C757D !important; }
 
 .card-info {
-  background: #48ABF7 !important; }
+  background: #39a092 !important; }
 
 .card-success {
   background: #31CE36 !important; }
@@ -1922,7 +1922,7 @@ label {
   .card-pricing.card-info .specification-list li {
     border-color: #11c0e4 !important; }
   .card-pricing.card-info .btn-light {
-    color: #48ABF7 !important; }
+    color: #39a092 !important; }
   .card-pricing.card-danger .specification-list li {
     border-color: #ff6972 !important; }
   .card-pricing.card-danger .btn-light {
@@ -2117,22 +2117,22 @@ label {
     .card-pricing2.card-secondary .price-value, .card-pricing2.card-secondary .value {
       border-left-color: #6C757D; }
   .card-pricing2.card-info {
-    border-bottom-color: #48ABF7; }
+    border-bottom-color: #39a092; }
     .card-pricing2.card-info .price-value:before, .card-pricing2.card-info .value:before {
-      border-left-color: #48ABF7;
-      border-top-color: #48ABF7; }
+      border-left-color: #39a092;
+      border-top-color: #39a092; }
     .card-pricing2.card-info .price-value, .card-pricing2.card-info .value {
-      border-right-color: #48ABF7; }
+      border-right-color: #39a092; }
       .card-pricing2.card-info .price-value:after, .card-pricing2.card-info .value:after {
-        border-right-color: #48ABF7; }
+        border-right-color: #39a092; }
     .card-pricing2.card-info .price-value:after, .card-pricing2.card-info .value:after {
-      border-bottom-color: #48ABF7; }
+      border-bottom-color: #39a092; }
     .card-pricing2.card-info .value {
-      color: #48ABF7; }
+      color: #39a092; }
     .card-pricing2.card-info:before {
-      background: #48ABF7; }
+      background: #39a092; }
     .card-pricing2.card-info .price-value, .card-pricing2.card-info .value {
-      border-left-color: #48ABF7; }
+      border-left-color: #39a092; }
   .card-pricing2.card-success {
     border-bottom-color: #31CE36; }
     .card-pricing2.card-success .price-value:before, .card-pricing2.card-success .value:before {
@@ -2299,7 +2299,7 @@ label {
 .card-annoucement.card-black .btn-light {
   color: #1a2035 !important; }
 .card-annoucement.card-info .btn-light {
-  color: #48ABF7 !important; }
+  color: #39a092 !important; }
 .card-annoucement.card-danger .btn-light {
   color: #F25961 !important; }
 .card-annoucement.card-warning .btn-light {
@@ -2433,9 +2433,9 @@ label {
   .accordion.accordion-secondary .card .card-header .btn-link {
     color: #6C757D !important; }
 .accordion.accordion-info .card .card-header {
-  color: #48ABF7; }
+  color: #39a092; }
   .accordion.accordion-info .card .card-header .btn-link {
-    color: #48ABF7 !important; }
+    color: #39a092 !important; }
 .accordion.accordion-success .card .card-header {
   color: #31CE36; }
   .accordion.accordion-success .card .card-header .btn-link {
@@ -2659,7 +2659,7 @@ label {
 .custom-checkbox.checkbox-secondary .custom-control-input:checked ~ .custom-control-label::before {
   background-color: #6C757D; }
 .custom-checkbox.checkbox-info .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #48ABF7; }
+  background-color: #39a092; }
 .custom-checkbox.checkbox-success .custom-control-input:checked ~ .custom-control-label::before {
   background-color: #31CE36; }
 .custom-checkbox.checkbox-warning .custom-control-input:checked ~ .custom-control-label::before {
@@ -3029,7 +3029,7 @@ label.error {
   border: 1px solid #6C757D !important; }
 
 .table-bordered-bd-info td, .table-bordered-bd-info th {
-  border: 1px solid #48ABF7 !important; }
+  border: 1px solid #39a092 !important; }
 
 .table-bordered-bd-success td, .table-bordered-bd-success th {
   border: 1px solid #31CE36 !important; }
@@ -3055,7 +3055,7 @@ label.error {
   border: 1px solid #6C757D !important; }
 
 .table-head-bg-info thead {
-  border: 1px solid #48ABF7 !important; }
+  border: 1px solid #39a092 !important; }
 
 .table-head-bg-success thead {
   border: 1px solid #31CE36 !important; }
@@ -3082,7 +3082,7 @@ label.error {
   border: 0px !important; }
 
 .table-head-bg-info thead th, .table-striped-bg-info tbody tr:nth-of-type(odd) {
-  background: #48ABF7 !important;
+  background: #39a092 !important;
   color: #ffffff !important;
   border: 0px !important; }
 
@@ -3246,9 +3246,9 @@ label.error {
 .navbar-nav.page-navigation.page-navigation-danger .nav-item .nav-link:hover {
   color: #F25961 !important; }
 .navbar-nav.page-navigation.page-navigation-info .nav-item.active .nav-link {
-  color: #48ABF7 !important; }
+  color: #39a092 !important; }
 .navbar-nav.page-navigation.page-navigation-info .nav-item .nav-link:hover {
-  color: #48ABF7 !important; }
+  color: #39a092 !important; }
 
 /*    Navbar Line     */
 .navbar-line {
@@ -3302,7 +3302,7 @@ label.error {
 .navbar-line .navbar-nav.page-navigation.page-navigation-danger .nav-item.active::before {
   background: #F25961 !important; }
 .navbar-line .navbar-nav.page-navigation.page-navigation-info .nav-item.active::before {
-  background: #48ABF7 !important; }
+  background: #39a092 !important; }
 
 .navbar-header:not([data-background-color]) .navbar-line .navbar-nav.page-navigation .active .nav-link, .navbar-header[data-background-color="white"] .navbar-line .navbar-nav.page-navigation .active .nav-link {
   color: #666; }
@@ -3410,7 +3410,7 @@ label.error {
   background: #6C757D; }
 
 .badge-info {
-  background: #48ABF7; }
+  background: #39a092; }
 
 .badge-success {
   background-color: #31CE36; }
@@ -3479,7 +3479,7 @@ label.error {
     .notif-box .notif-center a .notif-icon.notif-secondary, .messages-notif-box .notif-center a .notif-icon.notif-secondary {
       background: #6C757D !important; }
     .notif-box .notif-center a .notif-icon.notif-info, .messages-notif-box .notif-center a .notif-icon.notif-info {
-      background: #48ABF7 !important; }
+      background: #39a092 !important; }
     .notif-box .notif-center a .notif-icon.notif-success, .messages-notif-box .notif-center a .notif-icon.notif-success {
       background: #31CE36 !important; }
     .notif-box .notif-center a .notif-icon.notif-warning, .messages-notif-box .notif-center a .notif-icon.notif-warning {
@@ -3639,11 +3639,11 @@ label.error {
   .quick-actions.quick-actions-secondary .quick-actions-item {
     color: #6C757D; }
   .quick-actions.quick-actions-info:after {
-    border-bottom-color: #48ABF7 !important; }
+    border-bottom-color: #39a092 !important; }
   .quick-actions.quick-actions-info .quick-actions-header {
-    background: #48ABF7; }
+    background: #39a092; }
   .quick-actions.quick-actions-info .quick-actions-item {
-    color: #48ABF7; }
+    color: #39a092; }
   .quick-actions.quick-actions-warning:after {
     border-bottom-color: #FFAD46 !important; }
   .quick-actions.quick-actions-warning .quick-actions-header {
@@ -3793,9 +3793,9 @@ label.error {
     background: #6C757D; }
 
 .alert-info {
-  border-left: 4px solid #48ABF7; }
+  border-left: 4px solid #39a092; }
   .alert-info [data-notify="icon"]:before {
-    background: #48ABF7; }
+    background: #39a092; }
 
 .alert-success {
   border-left: 4px solid #31CE36; }
@@ -3921,13 +3921,13 @@ label.error {
     border-color: #6C757D !important; }
 
 .btn-info {
-  background: #48ABF7 !important;
-  border-color: #48ABF7 !important;
+  background: #39a092 !important;
+  border-color: #39a092 !important;
   color: #ffffff !important; }
   .btn-info:hover, .btn-info:focus, .btn-info:disabled {
     color: #ffffff !important;
-    background: #48ABF7 !important;
-    border-color: #48ABF7 !important; }
+    background: #39a092 !important;
+    border-color: #39a092 !important; }
 
 .btn-success {
   background: #31CE36 !important;
@@ -3994,10 +3994,10 @@ label.error {
 
 .btn-label-info {
   background: rgba(72, 171, 247, 0.1);
-  color: #48ABF7 !important;
+  color: #39a092 !important;
   border-color: transparent; }
   .btn-label-info:hover, .btn-label-info:focus, .btn-label-info:disabled {
-    background: #48ABF7;
+    background: #39a092;
     color: #fff !important;
     opacity: 1; }
 
@@ -4054,8 +4054,8 @@ label.error {
     color: #6C757D !important;
     border: 1px solid #6C757D !important; }
   .btn-border.btn-info {
-    color: #48ABF7 !important;
-    border: 1px solid #48ABF7 !important; }
+    color: #39a092 !important;
+    border: 1px solid #39a092 !important; }
   .btn-border.btn-success {
     color: #31CE36 !important;
     border: 1px solid #31CE36 !important; }
@@ -4094,9 +4094,9 @@ label.error {
     .btn-link.btn-secondary:hover {
       color: #6C757D !important; }
   .btn-link.btn-info {
-    color: #48ABF7 !important; }
+    color: #39a092 !important; }
     .btn-link.btn-info:hover {
-      color: #48ABF7 !important; }
+      color: #39a092 !important; }
   .btn-link.btn-success {
     color: #31CE36 !important; }
     .btn-link.btn-success:hover {
@@ -4212,8 +4212,8 @@ label.error {
   background: #6C757D;
   border: 1px solid #6C757D; }
 .nav-pills.nav-info .nav-link.active {
-  background: #48ABF7;
-  border: 1px solid #48ABF7; }
+  background: #39a092;
+  border: 1px solid #39a092; }
 .nav-pills.nav-success .nav-link.active {
   background: #31CE36;
   border: 1px solid #31CE36; }
@@ -4257,9 +4257,9 @@ label.error {
 .nav.nav-simple.nav-color-secondary .nav-link.active {
   color: #6C757D; }
 .nav.nav-simple.nav-color-info .nav-link:hover, .nav.nav-simple.nav-color-info .nav-link:focus {
-  color: #48ABF7; }
+  color: #39a092; }
 .nav.nav-simple.nav-color-info .nav-link.active {
-  color: #48ABF7; }
+  color: #39a092; }
 .nav.nav-simple.nav-color-success .nav-link:hover, .nav.nav-simple.nav-color-success .nav-link:focus {
   color: #31CE36; }
 .nav.nav-simple.nav-color-success .nav-link.active {
@@ -4299,11 +4299,11 @@ label.error {
 .nav.nav-line.nav-color-secondary .nav-link.active {
   border-color: #6C757D; }
 .nav.nav-line.nav-color-info .nav-link:hover, .nav.nav-line.nav-color-info .nav-link:focus {
-  color: #48ABF7; }
+  color: #39a092; }
 .nav.nav-line.nav-color-info .nav-link.active {
-  color: #48ABF7; }
+  color: #39a092; }
 .nav.nav-line.nav-color-info .nav-link.active {
-  border-color: #48ABF7; }
+  border-color: #39a092; }
 .nav.nav-line.nav-color-success .nav-link:hover, .nav.nav-line.nav-color-success .nav-link:focus {
   color: #31CE36; }
 .nav.nav-line.nav-color-success .nav-link.active {
@@ -4404,8 +4404,8 @@ label.error {
   border-color: #6C757D;
   color: #ffffff; }
 .pagination.pg-info > li.active > a, .pagination.pg-info > li.active:first-child > a, .pagination.pg-info > li.active:last-child > a, .pagination.pg-info > li.active > span, .pagination.pg-info > li.active:first-child > span, .pagination.pg-info > li.active:last-child > span {
-  background: #48ABF7;
-  border-color: #48ABF7;
+  background: #39a092;
+  border-color: #39a092;
   color: #ffffff; }
 .pagination.pg-success > li.active > a, .pagination.pg-success > li.active:first-child > a, .pagination.pg-success > li.active:last-child > a, .pagination.pg-success > li.active > span, .pagination.pg-success > li.active:first-child > span, .pagination.pg-success > li.active:last-child > span {
   background: #31CE36;
@@ -4431,7 +4431,7 @@ label.error {
   background: #6C757D; }
 
 .slider-info .ui-slider-range {
-  background: #48ABF7; }
+  background: #39a092; }
 
 .slider-success .ui-slider-range {
   background: #31CE36; }
@@ -4505,7 +4505,7 @@ label.error {
   background: #F25961 !important; }
 
 .feed-item-info::after {
-  background: #48ABF7 !important; }
+  background: #39a092 !important; }
 
 .feed-item-warning::after {
   background: #FFAD46 !important; }
@@ -4638,7 +4638,7 @@ label.error {
 .timeline-badge.danger {
   background-color: #F25961 !important; }
 .timeline-badge.info {
-  background-color: #48ABF7 !important; }
+  background-color: #39a092 !important; }
 
 .timeline-title {
   font-size: 17px;
@@ -4918,12 +4918,12 @@ label.error {
   color: #6C757D;
   box-shadow: 0 0 0 2px rgba(104, 97, 206, 0.25); }
 .selectgroup.selectgroup-info .selectgroup-input:checked + .selectgroup-button {
-  border-color: #48ABF7;
-  color: #48ABF7;
+  border-color: #39a092;
+  color: #39a092;
   background: rgba(72, 171, 247, 0.15); }
 .selectgroup.selectgroup-info .selectgroup-input:focus + .selectgroup-button {
-  border-color: #48ABF7;
-  color: #48ABF7;
+  border-color: #39a092;
+  color: #39a092;
   box-shadow: 0 0 0 2px rgba(72, 171, 247, 0.25); }
 .selectgroup.selectgroup-success .selectgroup-input:checked + .selectgroup-button {
   border-color: #31CE36;
@@ -5490,7 +5490,7 @@ label.error {
 
 .loader-info,
 .is-loading-info:after {
-  border-color: #48ABF7; }
+  border-color: #39a092; }
 
 .loader-success,
 .is-loading-success:after {
@@ -6566,10 +6566,10 @@ body {
   background-color: #5C55BF !important; }
 
 .bg-info {
-  background-color: #48ABF7 !important; }
+  background-color: #39a092 !important; }
 
 .bg-info2 {
-  background-color: #3697E1 !important; }
+  background-color: #39a092!important; }
 
 .bg-success {
   background-color: #31CE36 !important; }
@@ -6611,9 +6611,9 @@ body {
   background: linear-gradient(-45deg, #2a20ac, #6C757D) !important; }
 
 .bg-info-gradient {
-  background: #48ABF7 !important;
-  background: -webkit-linear-gradient(legacy-direction(-45deg), #0a5a97, #48ABF7) !important;
-  background: linear-gradient(-45deg, #0a5a97, #48ABF7) !important; }
+  background: #39a092 !important;
+  background: -webkit-linear-gradient(legacy-direction(-45deg), #0a5a97, #39a092) !important;
+  background: linear-gradient(-45deg, #0a5a97, #39a092) !important; }
 
 .bg-success-gradient {
   background: #31CE36 !important;
