--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,8 @@
 ===========================*/
 :root {
   --font-family: "Inter", sans-serif;
-  --primary: #181160;
-  --primary-dark: #1c3ab6;
+  --primary: #2c467c;
+  --primary-dark: #39a092;
   --primary-light: #e2f1ff;
   --accent: #00d4d7;
   --accent-dark: #00bac1;
@@ -16,7 +16,7 @@
   --secondary: #8f15d5;
   --secondary-dark: #6013c7;
   --secondary-light: #f4e5fa;
-  --info: #15b2d5;
+  --info: #39a092;
   --info-dark: #0f8ca8;
   --info-light: #e0f5fa;
   --caution: #dbbb25;
@@ -37,15 +37,15 @@
   --light-2: #f5f5f5;
   --light-3: #fafafa;
   --white: #ffffff;
-  --gradient-1: linear-gradient(180deg, #181160 0%, #1c3ab6 100%);
-  --gradient-2: linear-gradient(180deg, #181160 13.02%, #00d4d7 85.42%);
-  --gradient-3: linear-gradient(180deg, #181160 0%, #8f15d5 100%);
-  --gradient-4: linear-gradient(180deg, #181160 0%, #13d527 100%);
-  --gradient-5: linear-gradient(180deg, #181160 0%, #15bbd5 100%);
-  --gradient-6: linear-gradient(180deg, #181160 0%, #dbbb25 100%);
-  --gradient-7: linear-gradient(180deg, #181160 0%, #e6185e 100%);
-  --gradient-8: linear-gradient(180deg, #1c3ab6 0%, #00bac1 100%);
-  --gradient-9: linear-gradient(180deg, #00d4d7 13.02%, #181160 85.42%);
+  --gradient-1: linear-gradient(180deg, #2c467c 0%, #39a092 100%);
+  --gradient-2: linear-gradient(180deg, #2c467c 13.02%, #00d4d7 85.42%);
+  --gradient-3: linear-gradient(180deg, #2c467c 0%, #8f15d5 100%);
+  --gradient-4: linear-gradient(180deg, #2c467c 0%, #13d527 100%);
+  --gradient-5: linear-gradient(180deg, #2c467c 0%, #15bbd5 100%);
+  --gradient-6: linear-gradient(180deg, #2c467c 0%, #dbbb25 100%);
+  --gradient-7: linear-gradient(180deg, #2c467c 0%, #e6185e 100%);
+  --gradient-8: linear-gradient(180deg, #39a092 0%, #00bac1 100%);
+  --gradient-9: linear-gradient(180deg, #00d4d7 13.02%, #2c467c 85.42%);
   --shadow-1: 0px 0px 1px rgba(40, 41, 61, 0.08),
     0px 0.5px 2px rgba(96, 97, 112, 0.16);
   --shadow-2: 0px 0px 1px rgba(40, 41, 61, 0.04),
